# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./supplies";
 export * from "./usage_logs";
+export * from "./classrooms";
